--- a/games/ttt/ttt01.html
+++ b/games/ttt/ttt01.html
@@ -8,9 +8,10 @@ function getGameName(){
 };
 </script>
 
-<script type="text/javascript" src="./mydefs.js">
+
+<script type="text/javascript" src="../../mydefs02.js">
 </script>
-<script type="text/javascript" src="./strategygames.js">
+<script type="text/javascript" src="../../strategygames03.js">
 </script>
 
 <!-- In the following just change "tttengine01.js" to the name of the javascript file for your game. -->
@@ -19,7 +20,8 @@ function getGameName(){
 <style type="text/css">
 body
 {
-background-image:url("./heic0901a_H1.jpg");
+background-color: Green;
+background-image:url("../heic0901a_H1.jpg");
 }
 h1
 {
