--- a/games/terniLapilli/terniLapilli01.html
+++ b/games/terniLapilli/terniLapilli01.html
@@ -1,22 +1,14 @@
 <html>
-<head>
-
-<!-- In the following just change "TTT" to the name of your game. -->
 <script>
 function getGameName(){
-    return "Invaderz";
+    return "terniLapilli";
 };
 </script>
-
-<script type="text/javascript" src="../../mydefs02.js">
+<script type="text/javascript" src="../../mydefs.js">
 </script>
 <script type="text/javascript" src="../../strategygames03.js">
 </script>
-<script type="text/javascript" src="../../rectUtils.js">
-</script>
-
-<!-- In the following just change "invaderz02.js" to the name of the javascript file for your game. -->
-<script type="text/javascript" src="./invaderz02.js">
+<script type="text/javascript" src="./terniLapilli01.js">
 </script>
 <style type="text/css">
 body
@@ -77,7 +69,7 @@ width:100px;
 </style>
 </head>
 <body>
-<h1>Invaderz<br />
+<h1>Terni Lapilli<br />
 <!-- <input type="button" value="Instructions" onclick="showinstructions()" /> -->
 <input type="button" value="New Game" onclick="initGame()" />
 <input type="button" value="Undo" onclick="undoFn()" />
@@ -106,19 +98,6 @@ Messages.
 
 <br /><br />
 
-<h5>
-The goal is to have the most pieces on the board when the game ends.  
-Pieces move like chess rooks - vertically or horizontally any distance 
-without jumping over any other pieces.  
-Capturing is a variation on the custodial version: after player A moves a piece, 
-any piece of player B which borders it (vertically or horizontally) and
-which has 2 or more of player A's pieces as neighbors is removed from the board. 
-The other move possible is birth: pieces can be born on the white square at the each
-player's near right.  The birthing square are particular to each player, 
-e.g. player A cannot birth his pieces on player B's birthing square.  
-Passing is allowed, and the game ends with consequetive passes.
-</h5>
-
 <!-- <div id="score"> -->
 <!-- Score -->
 <!-- </div> -->
@@ -129,6 +108,9 @@ Passing is allowed, and the game ends with consequetive passes.
 <!-- Computer: 0  -->
 <!-- </div> -->
 
+<h5>
+This is a hypothesized reconstruction of the ancient Roman form of Tic-Tac-Toe, which was more interesting than the modern form.  The goal is the same, to get three of your pieces in a row.  But after each player places three pieces on the board, the nature of a move changes: now you must move one of your pieces to an adjacent square.  Any orthogonal (up/down or left/right) direction is permitted, but diagonal moves are only permitted along the two main diagonals - diagonal moves from the middle of one side to the middle of another are not permitted.
+</h5>
 
 </body>
 </html>
