--- a/games/terniLapilli/terniLapilli01.html
+++ b/games/terniLapilli/terniLapilli01.html
@@ -4,7 +4,7 @@ function getGameName(){
     return "terniLapilli";
 };
 </script>
-<script type="text/javascript" src="../../mydefs.js">
+<script type="text/javascript" src="../../mydefs02.js">
 </script>
 <script type="text/javascript" src="../../strategygames03.js">
 </script>
