everyLp, eachLp, mapLp,equalLp

--- a/games/gerrymander/gerrymander01.html
+++ b/games/gerrymander/gerrymander01.html
@@ -10,7 +10,7 @@ function getHexSize(){
 };
 </script>
 
-<script type="text/javascript" src="../../mydefs02.js">
+<script type="text/javascript" src="../../mydefs.js">
 </script>
 <script type="text/javascript" src="../../hexUtils.js">
 </script>
