--- a/games/Mate/index.html
+++ b/games/Mate/index.html
@@ -75,7 +75,7 @@ font-size:14px;
 </style>
 </head>
 <body>
-<h1>Cups<br />
+<h1>Mate<br />
 <!-- <input type="button" value="Instructions" onclick="showinstructions()" /> -->
 <input type="button" value="New Game" onclick="initGame()" />
 <input type="button" value="Undo" onclick="undoFn()" />
