added Oust, general index

--- a/games/Cups/index.html
+++ b/games/Cups/index.html
@@ -125,6 +125,11 @@ captures the opponent's stones directly across from it, and these are
 placed in the player's pot.  If a player has no possible moves he must
 pass, and when both players have passed the game ends and the player
 with more beans in his pot wins.
+<br/><br/>
+In this implementation moves of type 1 are made by simply clicking on
+the cup you want to sow from.  Type 2 moves are made by first clicking
+on your stack, then on the cup you want to sow <i>to</i>, i.e. cup
+that gets the last stone.
 </h5>
 
 <!-- <div id="score"> -->
