--- a/games/Mate/index.html
+++ b/games/Mate/index.html
@@ -113,6 +113,30 @@ This is a perfect information card game published by G. Capellen in 1915
  in Germany 
  and republished in Sid
 Sackson's great collection "A Gamut of Games". 
+<br /><br />
+You play two games in a row with the same starting position, the first
+ in which you are blue and go first, the second in which you are yellow
+ and go second.  A trick consists of selecting one card of your color
+ from the those
+ remaining in the tableau; the opponent then must select one of her
+ color from the same row, or if there is no such card in that row, from
+ the same column.  The players then compare their cards, the one who
+ played the higher card leads to the next trick.  Card A is "higher"
+ than card B in
+ this game if A is either to the left or above B in the tableau.
+If the responding player is unable to play (i.e. has no cards of his color
+ in either the same row or same column as the card led) then he is mated
+ and loses the round.  The winner scores a point value equal to the
+ number on the last card he played times the number of tricks played.
+<br /><br />
+An additional complication is the possibility of "foreplaying" (anyone
+detect a sexual motif in this game?).  On the first turn of the game
+either player or both may foreplay a card, meaning that it is removed
+from the tableau and the round continues with 1 or 2 fewer cards.  A
+player who foreplays a card has her trick number advanced by one, thus
+increasing her potential score should she win.  Furthermore, should she
+need to play one last card in round 10, she plays her last card again;
+in that case a win would see the score doubled.
 </h5>
 
 <!-- <div id="score"> -->
