--- a/games/invaderz/invaderz01.html
+++ b/games/invaderz/invaderz01.html
@@ -8,7 +8,7 @@ function getGameName(){
 };
 </script>
 
-<script type="text/javascript" src="../../mydefs02.js">
+<script type="text/javascript" src="../../mydefs.js">
 </script>
 <script type="text/javascript" src="../../strategygames03.js">
 </script>
