--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@ Another small but amusing game from AGoG.
 <br>
 <br>
 
+<h3>
+<big>Gin</big>
+</h3>
+<a href="games/gin/index.html"><img alt="Gin tableau" src="pics/ginScreen.png"
+ style="border: 0px solid ; width: 360px; height: 311px;"></a><br>
+<br>
+Gin rummy.  Cards are kind of abstract, right?
+<br>
+<br>
+
 
 <h3><big>Tic-Tac-Toe</big></h3>
 <a href="games/ttt/ttt01.html"><img alt="ttt board" src="pics/ttt.png"
