--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ play.<br>
 <a href="games/Cups/index.html"><img alt="Cups board" src="pics/cups.png"
  style="border: 0px solid ; width: 400px; height: 311px;"></a><br>
 <br>
-A modern mancala variant from "A Gamut of Games" (henceforth AGoG).
+<big>A modern mancala variant from "A Gamut of Games" (henceforth AGoG).</big>
 <br>
 <br>
 
@@ -31,7 +31,7 @@ A modern mancala variant from "A Gamut of Games" (henceforth AGoG).
 <a href="games/Mate/index.html"><img alt="Mate board" src="pics/mate.png"
  style="border: 0px solid ; width: 400px; height: 311px;"></a><br>
 <br>
-A game of perfect information played with cards (AGoG).
+<big>A game of perfect information played with cards (AGoG).</big>
 <br>
 <br>
 
@@ -41,7 +41,7 @@ A game of perfect information played with cards (AGoG).
 <a href="games/3musketeers/index.html"><img alt="Musketeers board" src="pics/3musk.png"
  style="border: 0px solid ; width: 360px; height: 311px;"></a><br>
 <br>
-Another small but amusing game from AGoG.
+<big>Another small but amusing game from AGoG.</big>
 <br>
 <br>
 
@@ -51,10 +51,18 @@ Another small but amusing game from AGoG.
 <a href="games/gin/index.html"><img alt="Gin tableau" src="pics/ginScreen.png"
  style="border: 0px solid ; width: 360px; height: 311px;"></a><br>
 <br>
-Gin rummy.  Cards are kind of abstract, right?
+<big>Gin rummy.  Cards are kind of abstract, right?</big>
 <br>
 <br>
 
+
+<h3><big>VennDoku</big></h3>
+<a href="games/venn/venn01.html"><img alt="Venn diagram" src="pics/vennWSscreen.png"
+ style="border: 0px solid ; width: 440px; height: 360px;"></a><br>
+<br>
+<big>Venn diagram deduction game.</big><br>
+<br>
+<br><br>
 
 <h3><big>Tic-Tac-Toe</big></h3>
 <a href="games/ttt/ttt01.html"><img alt="ttt board" src="pics/ttt.png"
