tweaked Life rules

--- a/games/Life/index.html
+++ b/games/Life/index.html
@@ -108,9 +108,17 @@ Messages.
 
 <br /><br />
 
-<h5>
-
-</h5>
+<h3>
+Life &amp; Death is based on Conway's Game of Life.  At each turn a
+player may give birth to one of his own pieces and kill an opponents.
+Birth is possible on any empty square touching (orthogonally or
+diagonally) exactly three of her own pieces; Death is possible for any
+of the opponent's pieces which either lack at least two neighbors of his
+own or are crowded by more than three pieces of either type.  The birth
+square is entered first, followed by the death square; either or both
+may be "pass".  On the first move of the game the player can take only
+one of those actions.
+</h3>
 
 <!-- <div id="score"> -->
 <!-- Score -->
