--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@ might have called it Zug-Zwang-Zwang.</big><br>
 shenanigans of the <a
  href="http://en.wikipedia.org/wiki/Gerrymandering">same name</a>.</big><br>
 <br>
+<br>
+<br>
+<h3><big>Life &amp; <span style="color:Black">Death</span></big></h3>
+<a href="games/Life/index.html"><img alt="Life & Death board"
+ src="pics/life.png"
+ style="border: 0px solid ; width: 500px; height: 500px;"></a><br>
+<br>
+<big>
+A two person game inspired by John Conway's well known Game of Life.
+</big><br>
+<br>
 
 
 
