sp corrected in Invaderz rules

--- a/games/invaderz/invaderz01.html
+++ b/games/invaderz/invaderz01.html
@@ -116,7 +116,7 @@ which has 2 or more of player A's pieces as neighbors is removed from the board.
 The other move possible is birth: pieces can be born on the white square at the each
 player's near right.  The birthing square are particular to each player, 
 e.g. player A cannot birth his pieces on player B's birthing square.  
-Passing is allowed, and the game ends with consequetive passes.
+Passing is allowed, and the game ends with consecutive passes.
 </h5>
 
 <!-- <div id="score"> -->
