added number chess to index

--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@ shenanigans of the <a
 A two person game inspired by John Conway's well known Game of Life.
 </big><br>
 <br>
+<br>
+<br>
+<h3><big>Number Chess</big></h3>
+<a href="games/arithmachy/index.html"><img alt="Number Chess board"
+ src="pics/numberChess.png"
+ style="border: 0px solid ; width: 500px; height: 500px;"></a><br>
+<br>
+<big>
+Chess with numbers that move like knights.
+</big><br>
+<br>
 
 
 
