clarified number chess rules

--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -110,7 +110,8 @@ Each number moves like a chess knight, i.e. to the opposite corner of an
 of the piece.  For 
 example, the number 6 moves like a standard chess knight 
 (<i>m</i> = 2 or 3, <i>n</i> = 3 or 2) 
-or like a pawn (<i>m</i> = 1, <i>n</i> = 2 or 3).
+or like a pawn (<i>m</i> = 1, <i>n</i> = 2 or 3), or in several other
+possible ways.
 An <i>exact</i> move is one for which <i>mn</i> equals the value of the
 piece; capturing is only allowed on exact moves.  If a move is inexact,
 then the piece is reduced in value to <i>mn</i>, and the difference
