capFlag rules are sorting

--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -119,7 +119,8 @@ between that and the original value is left behind on the original
 square.  If the target square is occupied by another piece of the same
 player, the values are added.
 <br /><br />
-The goal is complete annihilation of the opponent.
+The goal is to occupy the opponent's home square (where her first piece
+is originally placed) on two consecutive turns.
 </h5>
 
 <!-- <div id="score"> -->
