--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -81,7 +81,6 @@ width:100px;
 <input type="button" value="Undo" onclick="undoFn()" />
  </h1>
 <br />
-<br />
 <div id="optionsdiv">
 
     <form>
@@ -89,7 +88,6 @@ width:100px;
     </form>
 
 </div>
-<br /><br />
 
 <div id="playdiv">
 <script>
@@ -119,8 +117,13 @@ between that and the original value is left behind on the original
 square.  If the target square is occupied by another piece of the same
 player, the values are added.
 <br /><br />
-The goal is to occupy the opponent's home square (where her first piece
-is originally placed) on two consecutive turns.
+To make the tactics sharper, each player gets two consecutive moves
+(except on the first turn of the game).  In this implementation the
+human player must pass in
+between consecutive computer moves to allow the computer to continue.
+The goal is to simultaneously occupy the opponent's home squares (where
+her first pieces 
+are originally placed).
 </h5>
 
 <!-- <div id="score"> -->
