--- a/games/Awale/index.html
+++ b/games/Awale/index.html
@@ -75,7 +75,7 @@ font-size:14px;
 </style>
 </head>
 <body>
-<h1>Cups<br />
+<h1>Oware<br />
 <!-- <input type="button" value="Instructions" onclick="showinstructions()" /> -->
 <input type="button" value="New Game" onclick="initGame()" />
 <input type="button" value="Undo" onclick="undoFn()" />
@@ -109,27 +109,7 @@ Messages.
 <br /><br />
 
 <h5>
-This variant of mancala was invented by Arthur and Walt Amberstone and first published in Sid
-Sackson's great collection "A Gamut of Games".  Opponents sit opposite
-and interact only with the containers on their own side.  Those
-containers are a stack, at bottom; a pot, at right; and a row of cups,
-in the center.  Only two kinds of move are possible: <br/>
-(1) sow beans from one cup, one bean at a time into the cups to its
-right, ending exactly in the pot.<br/>
-(2) sow beans from the stack, one into each cup starting with the
-left-most and working to the right, ending with any other cup;<br/>
-For move type (1) exactly the correct number of beans must be in the cup
-so that none are left over after reaching the pot.  For move type (2) if
-the final cup reached with the last bean had been empty the player
-captures the opponent's stones directly across from it, and these are
-placed in the player's pot.  If a player has no possible moves he must
-pass, and when both players have passed the game ends and the player
-with more beans in his pot wins.
-<br/><br/>
-In this implementation moves of type 1 are made by simply clicking on
-the cup you want to sow from.  Type 2 moves are made by first clicking
-on your stack, then on the cup you want to sow <i>to</i>, i.e. cup
-that gets the last stone.
+
 </h5>
 
 <!-- <div id="score"> -->
