normal move sequence

--- a/games/Awale/index.html
+++ b/games/Awale/index.html
@@ -109,7 +109,17 @@ Messages.
 <br /><br />
 
 <h5>
+  Oware is a mancala game played at the tournament level in Africa,
+  Europe, and the Caribbean.  Players alternate taking one cup and
+  sowing the seeds one at a time into succeeding cups; the home cups
+  are skipped during sowing.  Seeds are captured when the last seed
+  sown is in an opponent's cup and the total number of seeds in that
+  cup is now 2 or 3; then the seeds from that cup are won, and all
+  consecutive prior cups on the opponent's side of size 2 or 3 are won
+  as well.
 
+  In this micro version of the game, to be won a cup must contain
+  exactly 1 seed.
 </h5>
 
 <!-- <div id="score"> -->
