added oware, fixed bug with noComps

--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -129,6 +129,9 @@ player, the values are added.
 The goal is to simultaneously occupy the opponent's home squares (where
 her first pieces 
 are originally placed).
+<br /><br />
+Note that you may need to install extra fonts for this to display
+properly.  On linux I've found that ttf-droid and ttf-dejavu do the trick.
 </h5>
 
 <!-- <div id="score"> -->
