--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@ play.<br>
 <br>
 
 <h3>
+<big>NanOware</big>
+</h3>
+<a href="games/Awale/index.html"><img alt="Oware board" src="pics/nanOware.png"
+ style="border: 0px solid ; width: 400px; height: 180px;"></a><br>
+<br>
+<big>A nano version of Oware, a popular mancala game.</big>
+<br>
+<br>
+
+<h3>
 <big>Mate</big>
 </h3>
 <a href="games/Mate/index.html"><img alt="Mate board" src="pics/mate.png"
