sort & symbol fix

--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -149,7 +149,9 @@ Symbols used:
 <script>document.write( numberToSymbol( 11 ) );</script> = 11<br />
 <script>document.write( numberToSymbol( 12 ) );</script> = 12<br />
 <script>document.write( numberToSymbol( 13 ) );</script> = 13<br />
-<script>document.write( numberToSymbol( 14 ) );</script> = 14
+<script>document.write( numberToSymbol( 14 ) );</script> = 14<br />
+<script>document.write( numberToSymbol( 15 ) );</script> = 15<br />
+<script>document.write( numberToSymbol( 16 ) );</script> = 16
 </h5>
 
 <!-- <div id="score"> -->
