KM: added symbola font, reduced depth but increased width of search

--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Knight Morphs</title>
 
 <script>
 function getGameName(){
@@ -34,7 +35,7 @@ font-size:14px;
 }
 div
 {
-font-family:"Times New Roman";
+font-family:"Times New Roman", "Symbola";
 font-size:36px;
 color:#bcd;
 }
@@ -75,7 +76,7 @@ width:100px;
 </style>
 </head>
 <body>
-<h1>Number Chess<br />
+<h1>Knight Morphs<br />
   <!-- <input type="button" value="Instructions" onclick="showinstructions()" /> -->
   <br /><br />
   <form>
@@ -124,14 +125,14 @@ then the piece is reduced in value to <i>mn</i>, and the difference
 between that and the original value is left behind on the original
 square.  If the target square is occupied by another piece of the same
 player, the values are added.
-<br /><br />
+<br /><br /><h2></h2>
 
 The goal is to simultaneously occupy the opponent's home squares (where
 her first pieces 
 are originally placed).
 <br /><br />
 Note that you may need to install extra fonts for this to display
-properly.  On linux I've found that ttf-droid and ttf-dejavu do the
+properly.  On linux I've found that symbola, dejavu, and droid do the
 trick.
 <br /><br />
 Symbols used:
