updated to new version of node webkit

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ A two person game inspired by John Conway's well known Game of Life.
 <br>
 <h3><big>Number Chess</big></h3>
 <a href="games/arithmachy/index.html"><img alt="Number Chess board"
- src="pics/numberChess.png"
+ src="pics/KnightMorphs.png"
  style="border: 0px solid ; width: 500px; height: 500px;"></a><br>
 <br>
 <big>
