added B&C to index

--- a/index.html
+++ b/index.html
@@ -138,13 +138,24 @@ A two person game inspired by John Conway's well known Game of Life.
 <br>
 <br>
 <br>
-<h3><big>Number Chess</big></h3>
+<h3><big>Knight Morphs</big></h3>
 <a href="games/arithmachy/index.html"><img alt="Number Chess board"
  src="pics/KnightMorphs.png"
  style="border: 0px solid ; width: 500px; height: 500px;"></a><br>
 <br>
 <big>
 Chess with numbers that move like knights.
+</big><br>
+<br>
+<br>
+<br>
+<h3><big>Bulls & Cows</big></h3>
+<a href="games/BullsAndCows/index.html"><img alt="Bulls & Cows board"
+ src="games/BullsAndCows/miniature_bucking_bulls_bred_cows_500_cortez_co_29715983_flat.jpg"
+ style="border: 0px solid ; width: 400px; height: 500px;"></a><br>
+<br>
+<big>
+The classic game; this version competes with you.
 </big><br>
 <br>
 
