p2p working for KM

--- a/games/arithmachy/index.html
+++ b/games/arithmachy/index.html
@@ -81,9 +81,9 @@ width:100px;
   <br /><br />
   <form>
   <fieldset>
-    <input type="radio" name="numPlayers" id="numPlayers1" value="1" checked = "checked" />
+    <input type="radio" name="numPlayers" id="numPlayers1" value="1" checked="true" onclick="numPlayersFun()" />
 <label for="numPlayers1">1 Player</label>
-  <input type="radio" name="numPlayers" id = "numPlayers2" value="2" />
+  <input type="radio" name="numPlayers" id = "numPlayers2" value="2" onclick="numPlayersFun()" />
   <label for="numPlayers2">2 Players</label>
   </form>
 <br /><br />
@@ -154,17 +154,6 @@ Symbols used:
 <script>document.write( numberToSymbol( 15 ) );</script> = 15<br />
 <script>document.write( numberToSymbol( 16 ) );</script> = 16
 </h5>
-
-<!-- <div id="score"> -->
-<!-- Score -->
-<!-- </div> -->
-<!-- <div id="score-left"> -->
-<!-- Human: 0  -->
-<!-- </div> -->
-<!-- <div id="score-right"> -->
-<!-- Computer: 0  -->
-<!-- </div> -->
-
 
 </body>
 </html>
