--- a/games/venn/venn01.html
+++ b/games/venn/venn01.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<script type="text/javascript" src="./mydefs.js"></script>
+<script type="text/javascript" src="../../mydefs.js"></script>
 <script type="text/javascript" src="./common.js"></script>
 <script type="text/javascript" src="./sylvester.js"></script>
 <script type="text/javascript" src="./venn01.js"></script>
