--- a/games/SeaBattle/index.html
+++ b/games/SeaBattle/index.html
@@ -9,6 +9,8 @@ function getGameName(){
 
 <script type="text/javascript" src="../../mydefs.js">
 </script>
+<script type="text/javascript" src="../../rectUtils.js">
+</script>
 <script type="text/javascript" src="../../strategygames03.js">
 </script>
 
