Venn: Math.pi to Math.PI

--- a/games/SeaBattle/index.html
+++ b/games/SeaBattle/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+  <title>Sea Battle</title>
 <script>
 function getGameName(){
     return "Sea Battle";
@@ -75,6 +75,7 @@ font-size:14px;
 
 </style>
 </head>
+
 <body>
 <h1>Sea Battle<br />
 <!-- <input type="button" value="Instructions" onclick="showinstructions()" /> -->
