--- a/games/Brandubh/index.html
+++ b/games/Brandubh/index.html
@@ -109,13 +109,19 @@ Messages.
 <br /><br />
 
 <h5>
-This is a modern version of Hnefatafl which is both simple and well
-balanced.  White's goal is to get his king safely to edge of the
-board; Black's goal is to capture White's king.  All pieces move like
-chess rooks.  All pieces except the king are captured custodian-wise:
+  This is an Irish version of Hnefatafl, which uses the smallest board.
+  White's goal is to get
+  his king safely to one of the corners of the 
+  board; Black's goal is to capture White's king.
+  The center square is called the throne and only the king may occupy
+  it; but any piece may pass over it.
+  All pieces move like
+chess rooks.  All pieces are captured custodian-wise:
 by surrounding a single piece on two opposite sides, either
-horizontally or vertically. To capture the king it must be surrounded
-on all four sides.  That's it.
+  horizontally or vertically;
+  The corners or empty throne count as hostile pieces for the purposes
+  of capture, except that
+  the king has the privilege that it cannot be captured using the throne.
 </h5>
 
 <!-- <div id="score"> -->
