--- a/games/Brandubh/index.html
+++ b/games/Brandubh/index.html
@@ -121,7 +121,7 @@ by surrounding a single piece on two opposite sides, either
   horizontally or vertically;
   The corners or empty throne count as hostile pieces for the purposes
   of capture, except that
-  the king has the privilege that it cannot be captured using the throne.
+  the king cannot be captured using the throne.
 </h5>
 
 <!-- <div id="score"> -->
