--- a/games/Brandubh/index.html
+++ b/games/Brandubh/index.html
@@ -14,9 +14,12 @@ function getGameName(){
 </script>
 <script type="text/javascript" src="../../strategygames03.js">
 </script>
-
 <script type="text/javascript" src="./engine.js">
 </script>
+
+<script type="text/javascript" src="../../c2cMC.js">
+</script>
+
 <style type="text/css">
 body
 {
