fixed c2c sign, stopped updating display

--- a/games/Brandubh/index.html
+++ b/games/Brandubh/index.html
@@ -17,8 +17,8 @@ function getGameName(){
 <script type="text/javascript" src="./engine.js">
 </script>
 
-<!-- <script type="text/javascript" src="../../c2cMC.js"> -->
-<!-- </script> -->
+<script type="text/javascript" src="../../c2cMC.js">
+</script>
 
 <style type="text/css">
 body
