added brandubh to index, modded depth and breadth

--- a/index.html
+++ b/index.html
@@ -158,6 +158,16 @@ Chess with numbers that move like knights.
 The classic game; this version competes with you.
 </big><br>
 <br>
+<br>
+<h3><big>Brandubh</big></h3>
+<a href="games/Brandubh/index.html"><img alt="Brandubh board"
+ src="pics/brandubh.png"
+ style="border: 0px solid ; width: 500px; height: 500px;"></a><br>
+<br>
+<big>
+Irish Viking Chess.
+</big><br>
+<br>
 
 
 
