first pass at adding deepening to AB

--- a/games/Brandubh/index.html
+++ b/games/Brandubh/index.html
@@ -12,7 +12,7 @@ function getGameName(){
 </script>
 <script type="text/javascript" src="../../rectUtils.js">
 </script>
-<script type="text/javascript" src="../../strategygames03.js">
+<script type="text/javascript" src="../../strategygames.js">
 </script>
 <script type="text/javascript" src="./engine.js">
 </script>
