--- a/games/ttt/ttt01.html
+++ b/games/ttt/ttt01.html
@@ -11,7 +11,7 @@ function getGameName(){
 
 <script type="text/javascript" src="../../mydefs.js">
 </script>
-<script type="text/javascript" src="../../strategygames03.js">
+<script type="text/javascript" src="../../strategygames.js">
 </script>
 
 <!-- In the following just change "tttengine01.js" to the name of the javascript file for your game. -->
@@ -21,7 +21,7 @@ function getGameName(){
 body
 {
 background-color: Green;
-background-image:url("../heic0901a_H1.jpg");
+
 }
 h1
 {
