--- a/games/gerrymander/gerrymander01.html
+++ b/games/gerrymander/gerrymander01.html
@@ -21,61 +21,61 @@ function getHexSize(){
 <script type="text/javascript" src="./gerrymander01.js">
 </script>
 <style type="text/css">
-body
-{
-background-color: Green;
-background-image:url("./heic0901a_H1.jpg");
-}
-h1
-{
-color:white;
-text-align:center;
-}
-div
-{
-font-family:"Times New Roman";
-font-size:36px;
-color:#bcd;
-}
-select
-{
-width:"2em";
-font-size:32px;
-background-color:#abc;
-color:#640;
-}
-input
-{
-font-size:24px;
-background-color:#bca;
-color:#406;
-}
-span.bull {color:fff;font-weight:bold}
-span.cow  {color:ff0;font-weight:bold}
+ body
+ {
+     background-color: Green;
+     /* background-image:url("./heic0901a_H1.jpg"); */
+ }
+ h1
+ {
+     color:white;
+     text-align:center;
+ }
+ div
+ {
+     font-family:"Times New Roman";
+     font-size:36px;
+     color:#bcd;
+ }
+ select
+ {
+     width:"2em";
+     font-size:32px;
+     background-color:#abc;
+     color:#640;
+ }
+ input
+ {
+     font-size:24px;
+     background-color:#bca;
+     color:#406;
+ }
+ span.bull {color:fff;font-weight:bold}
+ span.cow  {color:ff0;font-weight:bold}
 
-#score 
-{
-margin-top:10px;
-padding-bottom:10px;
-font-weight:bold;
-}	
-#score-left
-{
-float:left;
-margin-left:0px;
-width:100px;
-}
-#score-right
-{
-float:left;
-margin-left:100px;
-width:100px;
-}
-h5
-{
-color:white;
-font-size:14px;
-}
+ #score 
+ {
+     margin-top:10px;
+     padding-bottom:10px;
+     font-weight:bold;
+ }	
+ #score-left
+ {
+     float:left;
+     margin-left:0px;
+     width:100px;
+ }
+ #score-right
+ {
+     float:left;
+     margin-left:100px;
+     width:100px;
+ }
+ h5
+ {
+     color:white;
+     font-size:14px;
+ }
 
 </style>
 </head>
@@ -90,16 +90,16 @@ font-size:14px;
 <div id="optionsdiv">
 
     <form>
-      
+	
     </form>
 
 </div>
 <br /><br />
 
 <div id="playdiv">
-<script>
-document.write(makePanel(initBdTab))
-</script>
+    <script>
+	document.write(makePanel(initBdTab))
+    </script>
 </div>
 
 <!-- <br /> -->
